# rust-service-backend

./: .env.example  .gitignore  Cargo.toml
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
crates/api-server/src/handlers/: auth.rs  health.rs
crates/api-server/src/routes/: auth.rs  health.rs
crates/api-server/src/services/: auth_service.rs
crates/api-server/src/utils/: date_time.rs  hash_string.rs  jwt.rs  mod.rs
crates/audio-stream/: Cargo.toml
crates/audio-worker/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  error.rs  lib.rs  redis.rs
crates/common/src/models/: audio_file.rs  bookmark.rs  chapter.rs  mod.rs  reading_history.rs  story.rs  user.rs
docs/: guide-go.md  guide-rust.md  guide.md  plan-rust-detail.md  plan-rust.md
migrations/: 0001_create_users.sql  0002_create_stories.sql  0003_create_chapters.sql  0004_create_audio_files.sql  0005_create_reading_history.sql  0006_create_bookmarks.sql
requests/: auth.http  auth.sh
