[workspace]
members = [
    "crates/common",
    "crates/api-server",
    "crates/audio-worker",
    "crates/audio-stream",
]

resolver = "2"

# Dependencies shared common.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
envy = "0.4"
axum = "0.8.8"
deadpool-redis = "0.23.0"
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
chrono-tz = "0.10"
jsonwebtoken = "9"
