[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace =  true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
axum.workspace = true
deadpool-redis.workspace = true
argon2.workspace = true
chrono-tz.workspace = true
